Post big file as byte array through Native Plain old Java HTTPS.